<resources>
    <string name="app_name">Epic Center</string>

    <!-- String for http requests that result in no earthquake data -->
    <string name="empty_view_string">Looks like there haven\'t been any earthquakes for a while.  That\'s great! ...right?</string>

    <!-- String displayed when no internet connection is detected -->
    <string name="no_internet_connection">It looks like you\'re not connected to the All-Powerful Interwebs.  Maybe you should, just sayin\'.</string>

    <!-- String for Filter menu item -->
    <string name="filter_menu_item">Filter Search</string>

    <!-- String for FilterActivity -->
    <string name="filter_title">Earthquake Filter</string>

    <!-- Strings for Minimum Magnitude Preference -->
    <string name="filter_min_mag_label">Minimum Magnitude</string>
    <string name="filter_min_mag_key" translatable="false">min_magnitude</string>
    <string name="filter_min_mag_default" translatable="false">2.4</string>

    <!-- Strings for Maximum Magnitude EditTextPreference -->
    <string name="filter_max_mag_label">Maximum Magnitude</string>
    <string name="filter_max_mag_key">max_magnitude</string>
    <string name="filter_max_mag_default">10</string>

    <!-- Strings for Start Time EditTextPreference -->
    <string name="filter_start_time_label">Starting From</string>
    <string name="filter_start_time_key">start_time</string>
    <string name="filter_start_time_default">2017-01-01</string>
    
    <!-- Strings for Order By ListPreference -->
    <string name="filter_order_by_label">Order By</string>
    <string name="filter_order_by_key">order_by</string>
    <string name="filter_order_by_default">time</string>


</resources>
